--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>WEBT 1330 Project Page</h1>
     <ul>
-        <li><a href="/HCReview/home.html">HTML/CSS Review</a></li>
+        <li><a href="home.html">HTML/CSS Review</a></li>
         <li>Bootstrap</li>
         <li>Adobe XD Business Website</li>
         <li>Team Project</li>
