--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <div class="offhomebanner">
         <div class="offhomenavbar">
-            <a href="home.html"><img src="images/wiredcolorlogo.png" class="logo"></a>
+            <a href="home.html"><img src="images/wiredcolorlogo.png" alt="logo" class="logo"></a>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
