--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <div class="offhomebanner">
         <div class="offhomenavbar">
-            <a href="home.html"><img src="images/wiredcolorlogo.png" class="logo"></a>
+            <a href="home.html"><img src="images/wiredcolorlogo.png" alt="logo" class="logo"></a>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
@@ -64,14 +64,14 @@
         <div class="contact_data">
             <h2>Contact Us</h2>
             <form action="#">
-                <label for="">Name</label>
+                <label for="Name">Name</label>
                 <input type="text">
-                <label for="">Email</label>
+                <label for="Email">Email</label>
                 <input type="email">
-                <label for="">Subject</label>
+                <label for="Subject">Subject</label>
                 <input type="text">
-                <label for="">Message</label>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <label for="Message">Message</label>
+                <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
                 <button>Send Message</button>
             </form>
 
