--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>WEBT 1330 Project Page</h1>
     <ul>
         <li><a href="home.html">HTML/CSS Review</a></li>
+        <li><a href="bwhome.html">Adobe XD Business Website</a></li>
         <li>Bootstrap</li>
-        <li>Adobe XD Business Website</li>
         <li>Team Project</li>
         <li>Final Project</li>
     </ul>
