--- a/bootstrap/contact.html
+++ b/bootstrap/contact.html
@@ -53,7 +53,6 @@
             </div>
         </nav>
         <!-- Navbar -->
-
         <!-- Masthead -->
         <header>
             <div id="masthead" class="jumbotron object-fit-cover darken-image">
@@ -71,15 +70,21 @@
         <!-- Masthead -->
         <!-- Contact Form -->
         <div id="contact-form" class="container-lg my-4 p-4 rounded-3">
+            <!-- Heading -->
             <h1>Contact Us</h1>
+            <!-- Heading -->
+            <!-- Row 1 -->
             <div class="row">
                 <div class="col">
                     <p class="phone-number">(423) 309-2981</p>
                 </div>
                 <div class="col">
+                    <!-- HK Icon -->
                     <a class="icon-link float-end" href="https://www.hkarchitects.net/work/collegedale-commons">
                         <img id="hk-logo" src="images/hk_logo.png" alt="HK Architecture logo" viewBox="0 0 16 16">
                     </a>
+                    <!-- HK Icon -->
+                    <!-- FB Icon -->
                     <a class="icon-link float-end mx-4" href="https://www.facebook.com/ThecommonsTN">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#1877f2"
                             class="bi bi-facebook" viewBox="0 0 16 16">
@@ -87,23 +92,32 @@
                                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                         </svg>
                     </a>
+                    <!-- FB Icon -->
                 </div>
             </div>
-
+            <!-- Row 1 -->
+            <!-- Row 2 -->
             <p>4950 Swinyar Drive
                 Collegedale, TN 37363</p>
+            <!-- Row 2 -->
+            <!-- Subject Input -->
             <div class="mb-3">
                 <label for="subject" class="form-label">Subject</label>
                 <input type="subject" class="form-control" id="exampleFormControlInput1">
             </div>
+            <!-- Subject Input -->
+            <!-- Email Input -->
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
+            <!-- Email Input -->
+            <!-- Phone Input -->
             <div class="mb-3">
                 <div class="row">
                     <div class="col-sm-6">
                         <label for="number" class="form-label">Phone Number</label>
+                        <!-- Phone Tooltip -->
                         <a href="#" class="d-inline-block" data-bs-toggle="tooltip" data-bs-title="+1 (234) 567-8910">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#000"
                                 class="bi bi-info-circle" viewBox="0 0 16 16">
@@ -112,9 +126,11 @@
                                     d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
                             </svg>
                         </a>
+                        <!-- Phone Tooltip -->
                         <input type="number" class="form-control" id="exampleFormControlInput1">
                     </div>
-                    <!-- Date -->
+                    <!-- Phone Input -->
+                    <!-- Date Input -->
                     <div class="col-sm-6">
                         <label for="Date" class="form-label">Today's Date</label>
                         <div class="input-group date">
@@ -123,17 +139,20 @@
                     </div>
                 </div>
             </div>
+            <!-- Date Input -->
+            <!-- Message Input -->
             <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
 
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
-            <!-- Modal Button -->
+            <!-- Message Input -->
+            <!-- Modal Submit Button -->
             <div class="col-auto">
                 <button type="submit" class="btn btn-secondary col-sm-3" data-bs-toggle="modal"
                     data-bs-target="#exampleModal">Submit</button>
             </div>
-            <!-- Modal Button -->
+            <!-- Modal Submit Button -->
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
@@ -156,6 +175,7 @@
             <!-- Modal -->
         </div>
         <!-- Contact Form -->
+        <!-- Date Picker -->
         <script>
             const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
             const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
@@ -165,6 +185,8 @@
                 uiLibrary: 'bootstrap5'
             });
         </script>
+        <!-- Date Picker -->
+
     </body>
 
 </html>
