--- a/bootstrap/foundershall.html
+++ b/bootstrap/foundershall.html
@@ -33,7 +33,7 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
     </head>
 
-    <body>
+    <body id="fh-body">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -83,7 +83,7 @@
             </div>
         </header>
         <!-- Masthead -->
-        <div id="fh-content" class="container-xl my-4 p-3 rounded-3">
+        <div id="fh-content" class="container-lg p-3 rounded-0">
             <h1 class="text-center">Founder's Hall</h1>
             <div class="mb-3 mx-auto" style="max-width: 992px;">
                 <div class="row g-0">
@@ -94,29 +94,29 @@
                     </div>
                     <div class="col-sm-6 mx-auto p-3">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional
-                                content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title text-center">Host Large Events in East Tennessee</h5>
+                            <p class="card-text">If your high school needs a prom location, banquet, or event hall in
+                                the Chattanooga area, The Commons is easy to find
+                                and has plenty of parking.</p>
+                            <p class="card-text"><small class="text-body-bo">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="mb-3 mx-auto" style="max-width: 992px;">
                 <div class="row g-0">
-                    <div class="col-sm-5 mx-auto p-3 order-2">
+                    <div id="right-img" class="col-sm-5 mx-auto p-3 order-2">
                         <a href="images/fireplace.jpeg" data-lightbox="mygallery" data-title="Caption Here">
                             <img src="images/1x1fireplace.png" class="img-fluid rounded" alt="...">
                         </a>
                     </div>
-                    <div class="col-sm-6 mx-auto p-3 order-1">
+                    <div id="left-text" class="col-sm-6 mx-auto p-3 order-1">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional
-                                content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title text-center">A Warm and Cozy Oasis in Between Two Playgrounds</h5>
+                            <p class="card-text">Founders Hall is an indoor/outdoor 10,000 sq. ft. pavilion (heated in
+                                the cold season) with glass garage doors all the
+                                way around, plus a back patio.</p>
+                            <p class="card-text"><small class="text-body-bo">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
                 </div>
@@ -125,20 +125,39 @@
                 <div class="row g-0">
                     <div class="col-sm-5 mx-auto p-3">
                         <a href="images/wedding_dance_kiss.jpeg" data-lightbox="mygallery" data-title="Caption Here">
-                            <img src="images/1x1fh_wkd.png" class="img-fluid rounded" alt="...">
+                            <img src="images/1x1fh_wkd.png" class="img-fluid rounded" alt="wedding dance kiss">
                         </a>
                     </div>
-                    <div class="col-sm-6 mx-auto p-3">
+                    <div class="col-sm-7 mx-auto p-3">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional
-                                content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                            <h5 class="card-title text-center">The Best Wedding Venue in Chattanooga, Tennessee
+                            </h5>
+                            <p class="card-text">If you are in need of a beautiful venue to have a wedding we got you
+                                covered! Say "I do" at the Commons in Collegedale. A wedding venue to remember with
+                                fairy-tale memories of a lifetime.</p>
+                            <p class="card-text"><small class="text-body-bo">Last updated 3 mins ago</small></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </body>
+    <script>
+        jQuery(document).ready(function ($) {
+            var alterClass = function () {
+                var ww = document.body.clientWidth;
+                if (ww < 575) {
+                    $('#right-img').removeClass('order-2');
+                } else if (ww >= 576) {
+                    $('#right-img').addClass('order-2');
+                };
+            };
+            $(window).resize(function () {
+                alterClass();
+            });
+            //Fire it when the page first loads:
+            alterClass();
+        });
+    </script>
 
 </html>
