--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -85,7 +85,7 @@
         <!-- Masthead -->
         <!-- Content -->
         <!-- Carousel -->
-        <div id="event-cards" class="container-xl my-4 p-3 rounded-3">
+        <div id="event-cards" class="container-lg p-3 rounded-0">
             <h1>What We Provide</h1>
             <div class="row mb-4">
                 <div class="col-sm-6 align-item-middle mx-auto">
@@ -143,7 +143,7 @@
             <!-- Carousel -->
             <!-- Directory Cards -->
             <div class="row">
-                <div class="col-sm-3 mb-3">
+                <div class="col-md-3 mb-3">
                     <div id="fh-card" class="card darken-image">
                         <div class="card-body d-flex flex-column overlay">
                             <h5 class="card-title text-center">Founder's hall</h5>
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 mb-3">
+                <div class="col-md-3 mb-3">
                     <div id="ch-card" class="card darken-image">
                         <div class="card-body d-flex flex-column overlay">
                             <h5 class="card-title text-center">Chestnut Hall</h5>
@@ -170,26 +170,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 mb-3">
+                <div class="col-md-3 mb-3">
                     <div id="w-card" class="card darken-image">
                         <div class="card-body d-flex flex-column overlay">
-                            <h5 class="card-title text-center">Weddings</h5>
+                            <h5 class="card-title text-center">Wedding Venue</h5>
                             <p id="card-p" class="card-text">Say "I do" at the Commons in Collegedale. A wedding venue
                                 to remember with fairy-tale memories of a lifetime.
                             </p>
-                            <a href="#" class="btn btn-light mt-auto align-self-end">Learn More</a>
+                            <a href="foundershall.html" class="btn btn-light mt-auto align-self-end">Learn More</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 mb-3">
+                <div class="col-md-3 mb-3">
                     <div id="fm-card" class="card darken-image">
                         <div class="card-body d-flex flex-column overlay">
-                            <h5 class="card-title text-center">Farmer's Market</h5>
-                            <p id="card-p" class="card-text">It's the place where neighbors become friends. Where
-                                merchants can thrive and where Collegedale entertains its
-                                townsfolk. There's something for everyone in The Commons.
+                            <h5 class="card-title text-center">Suites</h5>
+                            <p id="card-p" class="card-text">Perfect for a lovely bride, suave politician, or anyone in
+                                between! Located in beautiful Chestnut Hall.
                             </p>
-                            <a href="#" class="btn btn-light mt-auto align-self-end">Learn More</a>
+                            <a href="chestnuthall.html" class="btn btn-light mt-auto align-self-end">Learn More</a>
                         </div>
                     </div>
                 </div>
