--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -55,7 +55,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="foundershall.html">Founder's Hall</a>
                         </li>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="chestnuthall.html">Chestnut Hall</a>
                         </li>
@@ -112,7 +111,7 @@
                             </div>
                             <div class="carousel-item">
                                 <a href="images/carousel_3.jpeg" data-lightbox="mygallery" data-title="Caption Here">
-                                    <img id="eci" src="images/carousel_3.jpeg" class="d-block w-100 object-fit-cover"
+                                    <img id="eci2" src="images/carousel_3.jpeg" class="d-block w-100 object-fit-cover"
                                         alt="...">
                                 </a>
                             </div>
@@ -130,7 +129,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 mx-auto">
-                    <p id="card-p" class="text-justify">Offering nearly 20,000 square footage of event space, The
+                    <p class="text-justify">Offering nearly 20,000 square footage of event space, The
                         Commons is the
                         perfect
                         venue
@@ -147,7 +146,7 @@
                     <div id="fh-card" class="card darken-image">
                         <div class="card-body d-flex flex-column overlay">
                             <h5 class="card-title text-center">Founder's hall</h5>
-                            <p id="card-p" class="card-text">Founders Hall is an indoor/outdoor
+                            <p class="card-text">Founders Hall is an indoor/outdoor
                                 10,000 sq.
                                 ft.
                                 pavilion (heated in
@@ -162,7 +161,7 @@
                     <div id="ch-card" class="card darken-image">
                         <div class="card-body d-flex flex-column overlay">
                             <h5 class="card-title text-center">Chestnut Hall</h5>
-                            <p id="card-p" class="card-text">Chestnut Hall, with all the bells and whistles, includes a
+                            <p class="card-text">Chestnut Hall, with all the bells and whistles, includes a
                                 catering kitchen, bride and groom suites, a community room to
                                 accomodate 90 guests, with heating and air.
                             </p>
@@ -174,7 +173,7 @@
                     <div id="w-card" class="card darken-image">
                         <div class="card-body d-flex flex-column overlay">
                             <h5 class="card-title text-center">Wedding Venue</h5>
-                            <p id="card-p" class="card-text">Say "I do" at the Commons in Collegedale. A wedding venue
+                            <p class="card-text">Say "I do" at the Commons in Collegedale. A wedding venue
                                 to remember with fairy-tale memories of a lifetime.
                             </p>
                             <a href="foundershall.html" class="btn btn-light mt-auto align-self-end">Learn More</a>
@@ -185,7 +184,7 @@
                     <div id="fm-card" class="card darken-image">
                         <div class="card-body d-flex flex-column overlay">
                             <h5 class="card-title text-center">Suites</h5>
-                            <p id="card-p" class="card-text">Perfect for a lovely bride, suave politician, or anyone in
+                            <p class="card-text">Perfect for a lovely bride, suave politician, or anyone in
                                 between! Located in beautiful Chestnut Hall.
                             </p>
                             <a href="chestnuthall.html" class="btn btn-light mt-auto align-self-end">Learn More</a>
