--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="hc_review/home.html">HTML/CSS Review</a></li>
             <li><a href="business_website/bwhome.html">Adobe XD Business Website</a></li>
             <li><a href="bootstrap/index.html">Bootstrap</a></li>
-            <li>Team Project</li>
+            <li><a href="final/index.html">Team Project</a></li>
             <li>Final Project</li>
         </ul>
 
