--- a/final/index.html
+++ b/final/index.html
@@ -92,7 +92,6 @@
             </div>
         </nav>
         <!-- Navbar -->
-
         <!-- Masthead -->
         <header>
             <div id="masthead" class="jumbotron object-fit-cover">
@@ -225,7 +224,7 @@
                         to life, creating
                         cherished memories that last a lifetime.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-dark text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
                     </div>
                 </div>
             </div>
@@ -288,7 +287,7 @@
                         CityWalk, Universal Studios Orlando promises an unforgettable, cinematic escape for visitors of
                         all ages.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-dark text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
                     </div>
                 </div>
             </div>
@@ -381,7 +380,7 @@
                         the fascinating world of science, making it a must-visit destination for both locals and
                         tourists alike.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-dark text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
                     </div>
                 </div>
             </div>
@@ -440,7 +439,7 @@
                         destination for picnics, family outings, or simply unwinding in a setting that seamlessly blends
                         nature and urban charm.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-dark text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
                     </div>
                 </div>
             </div>
@@ -528,7 +527,7 @@
                         appreciation for the
                         performing arts.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-dark text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
                     </div>
                 </div>
             </div>
@@ -582,7 +581,7 @@
                         enriching the community
                         through the power of art.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-dark text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
                     </div>
                 </div>
             </div>
@@ -617,32 +616,27 @@
             // Enable the carousel functionality for the first carousel
             $(document).ready(function () {
                 $('#carouselDisney').carousel();
-
                 // Enable carousel controls for the first carousel
                 $('#carouselDisney .carousel-control-prev').click(function (event) {
                     event.preventDefault();
                     $('#carouselDisney').carousel('prev');
                 });
-
                 $('#carouselDisney .carousel-control-next').click(function (event) {
                     event.preventDefault();
                     $('#carouselDisney').carousel('next');
                 });
             });
         </script>
-
         <!-- Script for the second carousel -->
         <script>
             // Enable the carousel functionality for the second carousel
             $(document).ready(function () {
                 $('#carouselUniversal').carousel();
-
                 // Enable carousel controls for the second carousel
                 $('#carouselUniversal .carousel-control-prev').click(function (event) {
                     event.preventDefault();
                     $('#carouselUniversal').carousel('prev');
                 });
-
                 $('#carouselUniversal .carousel-control-next').click(function (event) {
                     event.preventDefault();
                     $('#carouselUniversal').carousel('next');
@@ -654,79 +648,65 @@
             // Enable the carousel functionality for the first carousel
             $(document).ready(function () {
                 $('#carouselOsc').carousel();
-
                 // Enable carousel controls for the first carousel
                 $('#carouselOsc .carousel-control-prev').click(function (event) {
                     event.preventDefault();
                     $('#carouselOsc').carousel('prev');
                 });
-
                 $('#carouselOsc .carousel-control-next').click(function (event) {
                     event.preventDefault();
                     $('#carouselOsc').carousel('next');
                 });
             });
         </script>
-
         <!-- Script for the fourth carousel -->
         <script>
             // Enable the carousel functionality for the second carousel
             $(document).ready(function () {
                 $('#carouselLep').carousel();
-
                 // Enable carousel controls for the second carousel
                 $('#carouselLep .carousel-control-prev').click(function (event) {
                     event.preventDefault();
                     $('#carouselLep').carousel('prev');
                 });
-
                 $('#carouselLep .carousel-control-next').click(function (event) {
                     event.preventDefault();
                     $('#carouselLep').carousel('next');
                 });
             });
         </script>
-
         <!-- Script for the fifth carousel -->
         <script>
             // Enable the carousel functionality for the first carousel
             $(document).ready(function () {
                 $('#carouselDpcpa').carousel();
-
                 // Enable carousel controls for the first carousel
                 $('#carouselDpcpa .carousel-control-prev').click(function (event) {
                     event.preventDefault();
                     $('#carouselDpcpa').carousel('prev');
                 });
-
                 $('#carouselDpcpa .carousel-control-next').click(function (event) {
                     event.preventDefault();
                     $('#carouselDpcpa').carousel('next');
                 });
             });
         </script>
-
         <!-- Script for the sixth carousel -->
         <script>
             // Enable the carousel functionality for the second carousel
             $(document).ready(function () {
                 $('#carouselOma').carousel();
-
                 // Enable carousel controls for the second carousel
                 $('#carouselOma .carousel-control-prev').click(function (event) {
                     event.preventDefault();
                     $('#carouselOma').carousel('prev');
                 });
-
                 $('#carouselOma .carousel-control-next').click(function (event) {
                     event.preventDefault();
                     $('#carouselOma').carousel('next');
                 });
             });
         </script>
-
-
-
     </body>
 
 </html>
