--- a/final/index.html
+++ b/final/index.html
@@ -224,7 +224,8 @@
                         to life, creating
                         cherished memories that last a lifetime.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="https://disneyworld.disney.go.com" target="_blank"
+                            role="button">Visit Their Site</a>
                     </div>
                 </div>
             </div>
@@ -287,7 +288,8 @@
                         CityWalk, Universal Studios Orlando promises an unforgettable, cinematic escape for visitors of
                         all ages.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="https://www.universalorlando.com/web/en/us"
+                            target="_blank" role="button">Visit Their Site</a>
                     </div>
                 </div>
             </div>
@@ -380,7 +382,8 @@
                         the fascinating world of science, making it a must-visit destination for both locals and
                         tourists alike.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="https://www.osc.org" target="_blank"
+                            role="button">Visit Their Site</a>
                     </div>
                 </div>
             </div>
@@ -439,7 +442,9 @@
                         destination for picnics, family outings, or simply unwinding in a setting that seamlessly blends
                         nature and urban charm.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center"
+                            href="https://www.orlando.gov/Parks-the-Environment/Directory/Lake-Eola-Park"
+                            target="_blank" role="button">Visit Their Site</a>
                     </div>
                 </div>
             </div>
@@ -527,7 +532,8 @@
                         appreciation for the
                         performing arts.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="https://www.drphillipscenter.org" target="_blank"
+                            role="button">Visit Their Site</a>
                     </div>
                 </div>
             </div>
@@ -581,7 +587,8 @@
                         enriching the community
                         through the power of art.</p>
                     <div class="d-flex align-items-start justify-content-center">
-                        <a class="btn btn-primary text-center" href="#" role="button">about</a>
+                        <a class="btn btn-primary text-center" href="https://omart.org" target="_blank"
+                            role="button">Visit Thier Site</a>
                     </div>
                 </div>
             </div>
