--- a/final/orlando.html
+++ b/final/orlando.html
@@ -88,6 +88,10 @@
                         </li>
                         <!-- Nav Item -->
                         <li class="nav-item">
+                            <a class="nav-link" href="pensacola.html">Pensacola</a>
+                        </li>
+                        <!-- Nav Item -->
+                        <li class="nav-item">
                             <a class="nav-link" href="stpetersburg.html">St. Petersburg</a>
                         </li>
                     </ul>
