--- a/hc_review/menu.html
+++ b/hc_review/menu.html
@@ -1,90 +1,341 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML & CSS Review</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+    <!-- Lightbox JavaScript (Full version) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"
+        integrity="sha512-Ixzuzfxv1EqafeQlTCufWfaC6ful6WFqIz4G+dWvK0beHw0NVJwvCKSgafpy5gwNqKmgUfIBraVwkKI+Cz0SEQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Lightbox CSS (Full version) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.css"
+        integrity="sha512-Woz+DqWYJ51bpVk5Fv0yES/edIMXjj3Ynda+KWTIkGoynAMHrqTcDUQltbipuiaD5ymEo9520lyoVOo9jCQOCA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Lightbox JavaScript Plus jQuery (Full version) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.js"
+        integrity="sha512-oaWLach/xXzklmJDBjHkXngTCAkPch9YFqOSphnw590sy86CVEnAbcpw17QjkUGppGmVJojwqHmGO/7Xxx6HCw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="offhomebanner">
-        <div class="offhomenavbar">
-            <a href="home.html"><img src="images/wiredcolorlogo.png" alt="logo" class="logo"></a>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+    <nav class="navbar navbar-expand-sm navbar-light no-border-radius bg-glass">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="home.html">
+                <img src="images/wiredcolorlogo.png" alt="Logo" width="100px" height="100px"
+                    class="d-inline-block align-text-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="page-break">
+    </nav>
+    <div class="header-image">
         <img src="images/menu_splitter.jpeg" alt="crafting espresso">
-        <h1>Menu</h1>
+        <h1 class="bad-script-regular">Menu</h1>
     </div>
-    <div class="menu">
-        <div class="menu-items">
-            <img src="images/espresso.png" alt="espresso">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Espresso</h5>
-                    <h5 class="price">$2.50</h5>
+
+
+    <!-- Hot Coffee -->
+
+
+    <div class="container-sm bg-glass pt-4 pb-5 mt-5">
+        <h2 class="bad-script-regular">Hot Coffee</h2>
+        <div class="menu">
+            <div class="menu-items rounded-3">
+                <img src="images/espresso.png" alt="espresso">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Espresso</h5>
+                        <h6 class="price">$2.50</h6>
+                    </div>
+                    <p>Coffee brewed by forcing hot water through finely ground usually darkly roasted coffee beans</p>
                 </div>
-                <p>Coffee brewed by forcing hot water through finely ground usually darkly roasted coffee beans</p>
             </div>
-        </div>
-        <div class="menu-items">
-            <img src="images/americano.png" alt="americano">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Americano</h5>
-                    <h5 class="price">$2.75</h5>
+            <div class="menu-items rounded-3">
+                <img src="images/americano.png" alt="americano">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Americano</h5>
+                        <h6 class="price">$2.75</h6>
+                    </div>
+                    <p>An espresso coffee drink made with a small amount of water</p>
                 </div>
-                <p>An espresso coffee drink made with a small amount of water</p>
             </div>
-        </div>
-        <div class="menu-items">
-            <img src="images/espresso_macchiato.png" alt="espresso macchiato">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Espresso Macchiato</h5>
-                    <h5 class="price">$3.10</h5>
+            <div class="menu-items rounded-3">
+                <img src="images/espresso_macchiato.png" alt="espresso macchiato">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Espresso Macchiato</h5>
+                        <h6 class="price">$3.10</h6>
+                    </div>
+                    <p>An espresso coffee drink made with a small amount of milk, usually foamed</p>
                 </div>
-                <p>An espresso coffee drink made with a small amount of milk, usually foamed</p>
             </div>
-        </div>
-        <div class="menu-items">
-            <img src="images/espresso_con_panna.png" alt="espresso con panna">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Espresso con Panna</h5>
-                    <h5 class="price">$3.20</h5>
+            <div class="menu-items rounded-3">
+                <img src="images/espresso_con_panna.png" alt="espresso con panna">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Espresso con Panna</h5>
+                        <h6 class="price">$3.20</h6>
+                    </div>
+                    <p>Double shot of espresso topped with whipped cream</p>
                 </div>
-                <p>Double shot of espresso topped with whipped cream</p>
             </div>
-        </div>
-        <div class="menu-items">
-            <img src="images/cappuccino.png" alt="cappuccino">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Cappuccino</h5>
-                    <h5 class="price">$3.40</h5>
+            <div class="menu-items rounded-3">
+                <img src="images/cappuccino.png" alt="cappuccino">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Cappuccino</h5>
+                        <h6 class="price">$3.40</h6>
+                    </div>
+                    <p>An espresso coffee drink made with milk that has been frothed up with pressurized steam</p>
                 </div>
-                <p>An espresso coffee drink made with milk that has been frothed up with pressurized steam</p>
             </div>
-        </div>
-        <div class="menu-items">
-            <img src="images/latte.png" alt="latte">
-            <div class="details">
-                <div class="details-sub">
-                    <h5>Latte</h5>
-                    <h5 class="price">$3.50</h5>
+            <div class="menu-items rounded-3">
+                <img src="images/latte.png" alt="latte">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Latte</h5>
+                        <h6 class="price">$3.50</h6>
+                    </div>
+                    <p>An espresso coffee drink made with hot steamed milk, milkier than a cappuccino</p>
                 </div>
-                <p>An espresso coffee drink made with hot steamed milk, milkier than a cappuccino</p>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/mocha.png" alt="mocha">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Mocha</h5>
+                        <h6 class="price">$4.00</h6>
+                    </div>
+                    <p>An espresso coffee drink made with hot steamed milk, and rich chocolate.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/french-press.png" alt="french press coffee">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>French Press Coffee</h5>
+                        <h6 class="price">$3.75</h6>
+                    </div>
+                    <p>A full-bodied coffee with our French press, crafted for a straightforward coffee
+                        experience.</p>
+                </div>
             </div>
         </div>
     </div>
 
-    
+
+    <!-- Tea -->
+
+
+    <div class="container-sm bg-glass pt-4 pb-5 mt-5">
+        <h2 class="bad-script-regular">Tea</h2>
+        <div class="menu">
+            <div class="menu-items rounded-3">
+                <img src="images/tea-assortment.png" alt="assorted tea">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Assorted Tea from Asia</h5>
+                        <h6 class="price">$3.00</h6>
+                    </div>
+                    <p>Explore a variety of teas from Asia, each with its unique flavor profile for a laid-back sipping
+                        experience.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/tea-green.png" alt="green tea">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Green Tea</h5>
+                        <h6 class="price">$2.50</h6>
+                    </div>
+                    <p>Pure green tea, known for its refreshing and grassy taste.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/tea-black.png" alt="black tea">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Black Tea</h5>
+                        <h6 class="price">$2.50</h6>
+                    </div>
+                    <p>Black tea, offering a robust and straightforward flavor.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/tea-lemon.png" alt="lemon tea">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Lemon Tea</h5>
+                        <h6 class="price">$3.00</h6>
+                    </div>
+                    <p>Lemon-infused black tea, featuring a bright and citrusy twist.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/tea-strawberry.png" alt="strawberry tea">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Strawberry Tea</h5>
+                        <h6 class="price">$3.50</h6>
+                    </div>
+                    <p>Strawberry-infused black tea, featuring a refreshing sweetness.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/tea-mint.png" alt="mint tea">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Mint Tea</h5>
+                        <h6 class="price">$2.75</h6>
+                    </div>
+                    <p>Soothing mint tea, featuring the invigorating aroma and refreshing
+                        taste from fresh mint leaves.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- Breakfast Items and Pastries -->
+
+
+    <div class="container-sm bg-glass pt-4 pb-5 mt-5">
+        <h2 class="bad-script-regular">Breakfast Items and Pastries</h2>
+        <div class="menu">
+            <div class="menu-items rounded-3">
+                <img src="images/coffee-cake.png" alt="coffee cake">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Coffee Cake</h5>
+                        <h6 class="price">$3.25</h6>
+                    </div>
+                    <p>Coffee cake, featuring layers of cinnamon streusel for
+                        texture.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/lemon-cake.png" alt="lemon cake">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Lemon Cake</h5>
+                        <h6 class="price">$3.50</h6>
+                    </div>
+                    <p>Delight in the citrusy flavors of our moist and flavorful lemon cake.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/muffin-choc.png" alt="chocolate muffin">
+                <div class="details">
+                    <div class.details-sub">
+                        <h5>Chocolate Muffin</h5>
+                        <h6 class="price">$2.25</h6>
+                    </div>
+                    <p>Indulge in the richness of our chocolate muffin, a decadent treat for chocolate lovers.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/muffin-bb.png" alt="blueberry muffin">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Blueberry Muffin</h5>
+                        <h6 class="price">$2.25</h6>
+                    </div>
+                    <p>Blueberry muffin, loaded with plump fresh blueberries.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/bread.png" alt="artisanal bread">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Assorted Artisanal Bread</h5>
+                        <h6 class="price">$2.50 per slice</h6>
+                    </div>
+                    <p>Ask your barista about our rotating selection of fresh baked bread.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/bagels.png" alt="assorted bagels">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Assorted Bagels</h5>
+                        <h6 class="price">$2.00 each</h6>
+                    </div>
+                    <p>Ask your barista about our rotating selection of fresh baked bagels.
+                    </p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/stuffed-croissant.png" alt="lemon poppy croissant">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Lemon Poppy Croissant</h5>
+                        <h6 class="price">$3.75</h6>
+                    </div>
+                    <p>Experience a burst of citrus with our lemon poppy stuffed croissant.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/feta-croissant.png" alt="spinach and feta croissant">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Spinach and Feta Croissant</h5>
+                        <h6 class="price">$3.75</h6>
+                    </div>
+                    <p>Delight in a buttery croissant filled with a combination of spinach and
+                        feta.</p>
+                </div>
+            </div>
+            <div class="menu-items rounded-3">
+                <img src="images/quiche.png" alt="quiche">
+                <div class="details">
+                    <div class="details-sub">
+                        <h5>Quiche</h5>
+                        <h6 class="price">$4.50</h6>
+                    </div>
+                    <p>Flaky crust filled with a delightful mix of savory ingredients in our classic quiche.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
